kate/katemainwindow.cpp
@@ -1073,7 +1073,7 @@ void KateMainWindow::saveProperties(KConfigGroup &config)
         }
     }
 
-    m_fileOpenRecent->saveEntries(KConfigGroup(config.config(), "Recent Files"));
+    saveOpenRecent(config.config());
     m_viewManager->saveViewConfiguration(config);
 }
 
@@ -1089,8 +1089,16 @@ void KateMainWindow::readProperties(const KConfigGroup &config)
 
     finishRestore();
 
-    m_fileOpenRecent->loadEntries(KConfigGroup(config.config(), "Recent Files"));
+    loadOpenRecent(config.config());
     m_viewManager->restoreViewConfiguration(config);
+}
+
+void KateMainWindow::saveOpenRecent(KConfig *config) {
+    m_fileOpenRecent->saveEntries(KConfigGroup(config, "Recent Files"));
+}
+
+void KateMainWindow::loadOpenRecent(const KConfig *config) {
+    m_fileOpenRecent->loadEntries(KConfigGroup(config, "Recent Files"));
 }
 
 void KateMainWindow::saveGlobalProperties(KConfig *sessionConfig)
