kate/session/katesessionmanager.cpp
@@ -189,15 +189,15 @@ void KateSessionManager::loadSession(const KateSession::Ptr &session) const
     // window config
     KConfigGroup c(sharedConfig, "General");
 
-    if (c.readEntry("Restore Window Configuration", true)) {
-        KConfig *cfg = sc;
-        bool delete_cfg = false;
-        // a new, named session, read settings of the default session.
-        if (! sc->hasGroup("Open MainWindows")) {
-            delete_cfg = true;
-            cfg = new KConfig(anonymousSessionFile(), KConfig::SimpleConfig);
-        }
+    KConfig *cfg = sc;
+    bool delete_cfg = false;
+    // a new, named session, read settings of the default session.
+    if (! sc->hasGroup("Open MainWindows")) {
+        delete_cfg = true;
+        cfg = new KConfig(anonymousSessionFile(), KConfig::SimpleConfig);
+    }
 
+    if (c.readEntry("Restore Window Configuration", true)) {
         int wCount = cfg->group("Open MainWindows").readEntry("Count", 1);
 
         for (int i = 0; i < wCount; ++i) {
@@ -210,16 +210,29 @@ void KateSessionManager::loadSession(const KateSession::Ptr &session) const
             KateApp::self()->mainWindow(i)->restoreWindowConfig(KConfigGroup(cfg, QStringLiteral("MainWindow%1 Settings").arg(i)));
         }
 
-        if (delete_cfg) {
-            delete cfg;
-        }
-
         // remove mainwindows we need no longer...
         if (wCount > 0) {
             while (wCount < KateApp::self()->mainWindowsCount()) {
                 delete KateApp::self()->mainWindow(KateApp::self()->mainWindowsCount() - 1);
             }
         }
+    } else {
+        const int windowsCount = KateApp::self()->mainWindowsCount();
+        for (int i = 0; i < windowsCount ; ++i) {
+            // if there are no main windows, create one to call loadOpenRecent()
+            if(i == windowsCount) {
+                KateMainWindow *w = KateApp::self()->newMainWindow();
+                if (w !=nullptr) {
+                    w->loadOpenRecent(cfg);
+                }
+            } else {
+                KateApp::self()->mainWindow(i)->loadOpenRecent(cfg);
+            }
+        }
+    }
+
+    if (delete_cfg) {
+        delete cfg;
     }
 }
 
@@ -341,6 +354,7 @@ void KateSessionManager::saveSessionTo(KConfig *sc) const
     bool saveWindowConfig = KConfigGroup(KSharedConfig::openConfig(), "General").readEntry("Restore Window Configuration", true);
     for (int i = 0; i < KateApp::self()->mainWindowsCount(); ++i) {
         KConfigGroup cg(sc, QStringLiteral("MainWindow%1").arg(i));
+        // saveProperties() handles saving the "open recent" files list
         KateApp::self()->mainWindow(i)->saveProperties(cg);
         if (saveWindowConfig) {
             KateApp::self()->mainWindow(i)->saveWindowConfig(KConfigGroup(sc, QStringLiteral("MainWindow%1 Settings").arg(i)));
